--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
-  }
+    "@astrojs/preact": "^4.1.3",
+    "@astrojs/sitemap": "^3.7.0",
+    "@astrojs/vercel": "^9.0.4",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.17.1",
+    "preact": "^10.28.3",
+    "tailwindcss": "^4.1.18"
+  },
+  "packageManager": "pnpm@9.15.4"
 }
