--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.17.1",
     "preact": "^10.28.3",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18"
   },
   "packageManager": "pnpm@9.15.4"
